# TFG

./: CMakeLists.txt  README.md  calibration.cpp  main_sub.py  mano_sj.cpp  package.xml  temp_list.txt  udp_blenthread.py
scripts/: blender_script.py  cal_sub.py  compilation.sh  compilation.sh~  dgHand.blend  gui_script.py  listenerGeneric.py  main_sub.py
src/: dglove.cpp  mano.cpp
